--- a/backend/src/index.html
+++ b/backend/src/index.html
@@ -67,7 +67,7 @@
                 </tr>
                 <tr>
                     <td>15:00</td>
-                    <td><button type="button" name="button" id="">○</button></td>
+                    <td><button type="button" name="button" id=""　data-restaurant="">○</button></td>
                     <td><button type="button" name="button">△</button></td>
                     <td>×</td>
                 </tr>
